src/objects/APTS_Auto_renewal_staging__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Affected_Asset_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only considering Bundles and standalones (Excluding Options)</description>
        <inlineHelpText>Only considering Bundles and standalones (Excluding Options)</inlineHelpText>
        <label>Affected Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Auto renewal stagings</relationshipLabel>
        <relationshipName>Auto_renewal_stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_region__c</fullName>
        <formula>CASE(APTS_Affected_Asset_Line_Item__r.APTS_relatedlist_agreement__r.Apttus__Account__r.Sales_Organization__c,
&apos;SAP_0333&apos;,&apos;Belgium&apos;,
&apos;SAP_0975&apos;,&apos;Denmark&apos;,
&apos;SAP_0976&apos;,&apos;Sweden&apos;,
&apos;SAP_6864&apos;,&apos;Norway&apos;,
&apos;SAP_6706&apos;,&apos;France&apos;,
&apos;SAP_0080&apos;,&apos;Spain&apos;,
&apos;SAP_0111&apos;,&apos;Netherlands&apos;,
&apos;SAP_6709&apos;,&apos;Ireland&apos;,
&apos;SAP_6712&apos;,&apos;Germany&apos;,
&apos;Great Britain&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Assets_Old_start_date__c</fullName>
        <label>Asset&apos;s old start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Assets_old_end_date__c</fullName>
        <label>Asset&apos;s old end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Associated_order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Auto renewal stagings</relationshipLabel>
        <relationshipName>Auto_renewal_stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_renewal_staging_Ext_id__c</fullName>
        <externalId>true</externalId>
        <label>Auto renewal staging Ext id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Phase_1_date_and_time_for_Rollback__c</fullName>
        <label>Phase 1 date and time(for Rollback)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Process_status__c</fullName>
        <label>Process status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unprocessed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Processed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_thread_sequence__c</fullName>
        <label>thread sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Auto renewal staging</label>
    <nameField>
        <displayFormat>ARSN-{0000}</displayFormat>
        <label>Auto renewal staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto renewal stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>